--- a/network_configuration/sgd.conf
+++ b/network_configuration/sgd.conf
@@ -6,10 +6,10 @@
     10
   ],
   "mini_batch_size": 10,
-  "epoch": 5,
+  "epoch": 30,
   "learning_rate": 3.0,
-  "train_q": "./data/train-images.idx3-ubyte",
-  "train_a": "./data/train-labels.idx1-ubyte",
-  "test_q": "./data/t10k-images.idx3-ubyte",
-  "test_a": "./data/t10k-labels.idx1-ubyte"
+  "train_q": "./data/train-images-idx3-ubyte",
+  "train_a": "./data/train-labels-idx1-ubyte",
+  "test_q": "./data/t10k-images-idx3-ubyte",
+  "test_a": "./data/t10k-labels-idx1-ubyte"
 }
