--- a/network_configuration/sgd1.conf
+++ b/network_configuration/sgd1.conf
@@ -8,6 +8,7 @@
   "mini_batch_size": 10,
   "epoch": 30,
   "learning_rate": 3.0,
+  "report_file": "sequential_mini10_epo30_eta3.0",
   "train_q": "./data/train-images-idx3-ubyte",
   "train_a": "./data/train-labels-idx1-ubyte",
   "test_q": "./data/t10k-images-idx3-ubyte",
