--- a/network_configuration/sgd0.conf
+++ b/network_configuration/sgd0.conf
@@ -8,8 +8,7 @@
   "mini_batch_size": 10,
   "epoch": 1,
   "learning_rate": 3.0,
-  "nr_thread": 100,
-  "report_file": "./result/sequential_mini10_epo5_eta3.0",
+  "report_file": "./result/dump",
   "train_q": "./data/train-images-idx3-ubyte",
   "train_a": "./data/train-labels-idx1-ubyte",
   "test_q": "./data/t10k-images-idx3-ubyte",
